// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Date block renders correctly 1`] = `
<jest>
  <time
    class="bcl-date-block bg-date rounded mw-date text-center d-flex flex-column ratio ratio-1x1"
    datetime="2021-01-23"
  >
    <div
      class="d-flex flex-column pt-2"
    >
      <div
        class="d-flex align-item-center justify-content-center bg-white border border-bottom-0 w-100 h-100 fs-5 text-uppercase"
      >
        <div
          class="d-flex flex-column align-item-center justify-content-center"
        >
          <div
            class="date-month"
          >
            Jan
          </div>
          <div
            class="date-day fw-bold"
          >
            23
          </div>
        </div>
      </div>
      <div
        class="bg-lighter border w-100 rounded-bottom py-1"
      >
        2021
      </div>
    </div>
  </time>
</jest>
`;

exports[`OE - Date block with end date renders correctly 1`] = `
<jest>
  <time
    class="bcl-date-block bg-date rounded mw-date text-center d-flex flex-column ratio ratio-1x1"
    datetime="2021-01-23"
  >
    <div
      class="d-flex flex-column pt-2"
    >
      <div
        class="d-flex align-item-center justify-content-center bg-white border border-bottom-0 w-100 h-100 fs-5 text-uppercase"
      >
        <div
          class="d-flex flex-column align-item-center justify-content-center"
        >
          <div
            class="date-month"
          >
            Jan
          </div>
          <div
            class="date-day fw-bold"
          >
            23
          </div>
        </div>
        <div
          class="d-flex flex-column align-item-center justify-content-center px-2"
        >
          <svg
            class="bi icon--xs"
          >
            <use
              xlink:href="#chevron-right"
            />
          </svg>
        </div>
        <div
          class="d-flex flex-column align-item-center justify-content-center"
        >
          <div
            class="date-month"
          >
            Jun
          </div>
          <div
            class="date-day fw-bold"
          >
            24
          </div>
        </div>
      </div>
      <div
        class="bg-lighter border w-100 rounded-bottom py-1"
      >
        2021 - 2023
      </div>
    </div>
  </time>
</jest>
`;
